--- a/src/edu/ung/mccb/csci/csci3300/iGoFast/View/login.fxml
+++ b/src/edu/ung/mccb/csci/csci3300/iGoFast/View/login.fxml
@@ -8,22 +8,32 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="297.0" maxWidth="423.0" style="-fx-background-color:#ffffff" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ung.mccb.csci.csci3300.iGoFast.Controller.Controller">
+<AnchorPane maxHeight="400.0" maxWidth="650.0" prefHeight="400.0" prefWidth="650.0" style="-fx-background-color:#ffffff" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ung.mccb.csci.csci3300.iGoFast.Controller.Controller">
     <children>
-        <TextField fx:id="txtadminID" layoutX="157.0" layoutY="110.0" prefHeight="27.0" prefWidth="259.0" promptText="Enter Admin ID" />
-        <PasswordField fx:id="txtpassword" layoutX="157.0" layoutY="158.0" prefHeight="27.0" prefWidth="259.0" promptText="Enter Password" />
-        <Button layoutX="368.0" layoutY="302.0" mnemonicParsing="false" onAction="#authneticateUser" style="-fx-background-color:#afd1a4" text="+">
+        <TextField fx:id="txtadminID" layoutX="82.0" layoutY="112.0" prefHeight="27.0" prefWidth="259.0" promptText="Enter Admin ID" />
+        <PasswordField fx:id="txtpassword" layoutX="82.0" layoutY="161.0" prefHeight="27.0" prefWidth="259.0" promptText="Enter Password" />
+        <Button layoutX="159.0" layoutY="198.0" mnemonicParsing="false" onAction="#authenticateUser" style="-fx-background-color:red" text="Login">
             <font>
                 <Font size="24.0" />
             </font></Button>
-        <Pane layoutY="4.0" prefHeight="53.0" prefWidth="423.0" style="-fx-background-color:#afd1a4">
+        <Pane layoutY="4.0" prefHeight="53.0" prefWidth="501.0" style="-fx-background-color:red">
             <children>
-                <Label layoutY="-7.0" prefHeight="38.0" prefWidth="423.0" text="Sign In" textAlignment="CENTER">
+                <Label layoutX="11.0" layoutY="-7.0" prefHeight="70.0" prefWidth="490.0" text="Traffic Control Admin" textAlignment="CENTER">
                     <font>
                         <Font size="48.0" />
                     </font>
                 </Label>
             </children>
         </Pane>
+      <Button layoutX="378.0" layoutY="209.0" mnemonicParsing="false" onAction="#goRegister" prefHeight="16.0" prefWidth="79.0" style="-fx-background-color:red" text="Register" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Label layoutX="378.0" layoutY="182.0" text="New Admin?">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
