--- a/src/edu/ung/mccb/csci/csci3300/iGoFast/View/register.fxml
+++ b/src/edu/ung/mccb/csci/csci3300/iGoFast/View/register.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -7,19 +8,19 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="297.0" maxWidth="423.0" style="-fx-background-color:#ffffff" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ung.mccb.csci.csci3300.iGoFast.Controller.Controller">
+<AnchorPane maxHeight="333.0" maxWidth="423.0" prefHeight="333.0" prefWidth="423.0" style="-fx-background-color:#ffffff" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ung.mccb.csci.csci3300.iGoFast.Controller.Controller">
     <children>
 
-        <TextField fx:id="txtusername" layoutX="157.0" layoutY="110.0" prefHeight="27.0" prefWidth="259.0" promptText="Enter Username" />
-        <PasswordField fx:id="txtpassword" layoutX="157.0" layoutY="206.0" prefHeight="27.0" prefWidth="259.0" promptText="Create Password" />
-        <PasswordField fx:id="txtcpassword" layoutX="157.0" layoutY="254.0" prefHeight="27.0" prefWidth="259.0" promptText="Confirm Password" />
-        <Button layoutX="368.0" layoutY="302.0" mnemonicParsing="false" onAction="#touchLogin" style="-fx-background-color:red" text="+">
+        <TextField fx:id="txtusername" layoutX="82.0" layoutY="112.0" prefHeight="27.0" prefWidth="259.0" promptText="Enter Username" />
+        <PasswordField fx:id="txtpassword" layoutX="82.0" layoutY="184.0" prefHeight="27.0" prefWidth="259.0" promptText="Create Password" />
+        <PasswordField fx:id="txtcpassword" layoutX="82.0" layoutY="222.0" prefHeight="27.0" prefWidth="259.0" promptText="Confirm Password" />
+        <Button layoutX="167.0" layoutY="267.0" mnemonicParsing="false" onAction="#touchLogin" style="-fx-background-color:red" text="Register">
             <font>
-                <Font size="24.0" />
+                <Font size="18.0" />
             </font></Button>
         <Pane layoutY="4.0" prefHeight="53.0" prefWidth="423.0" style="-fx-background-color:red">
             <children>
-                <Label layoutY="-7.0" prefHeight="38.0" prefWidth="423.0" text="Sign Up" textAlignment="CENTER">
+                <Label layoutX="12.0" layoutY="-7.0" prefHeight="70.0" prefWidth="411.0" text="Register as Admin" textAlignment="CENTER">
                     <font>
                         <Font size="48.0" />
                     </font>
